--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -4,57 +4,57 @@
 @inject IContentService ContentService
 
 @{
-    string currentPage = ViewContext.RouteData.Values["slug"]?.ToString();
+    string currentPage = ViewContext.RouteData.Values["slug"]?.ToString() ?? string.Empty;
     var breadcrumbs = await ContentService.GetBreadcrumbs(currentPage, false);
 }
 
-<nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
-    <div class="dfe-width-container">
-        <p class="dfe-header__navigation-title">
-            <span id="label-navigation">Menu</span>
-            <button class="dfe-header__navigation-close" id="close-menu">
-                <svg class="dfe-icon dfe-icon__close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false" width="27" height="27">
-                    <path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"></path>
-                </svg>
-                <span class="govuk-visually-hidden">Close menu</span>
-            </button>
-        </p>
-        <ul class="dfe-header__navigation-list">
-            @foreach (var link in Model.ContentfulConfiguration.Navigation)
-            {
-                string className = "dfe-header__navigation-item";
-                if (link.Slug == currentPage || breadcrumbs.Exists(b => b.Slug == link.Slug))
-                {
-                    className += " dfe-header__navigation-item--current";
-                }
 
-                <li class="@className">
-                    <a class="dfe-header__navigation-link" href="@Url.Action("GetContent", "Contentful", new { slug = link.Slug, languageCode = Model.Language.Code })">
-                        @link.Title
-                        <svg class="dfe-icon dfe-icon__chevron-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
-                            <path d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"></path>
-                        </svg>
-                    </a>
-                </li>
-            }
-        </ul>
+<nav class="govuk-service-navigation" data-module="govuk-service-navigation" id="header-navigation">
+    <div class="govuk-width-container">
+        <div class="govuk-service-navigation__container">
+            <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
+                <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle"
+                        aria-controls="navigation" hidden>
+                    Menu
+                </button>
+                <ul class="govuk-service-navigation__list" id="navigation">
+                    @foreach(var link in Model.ContentfulConfiguration.Navigation)
+                    {
+                        if (link.Slug == currentPage || breadcrumbs.Exists(b => b.Slug == link.Slug))
+                        {
+                            <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
+                                <a class="govuk-service-navigation__link" href="@Url.Action("GetContent", "Contentful", new { slug = link.Slug, languageCode = Model.Language.Code })" aria-current="true">
+                                    <strong class="govuk-service-navigation__active-fallback">@link.Title</strong>
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="govuk-service-navigation__item">
+                                <a class="govuk-service-navigation__link" href="@Url.Action("GetContent", "Contentful", new { slug = link.Slug, languageCode = Model.Language.Code })">
+                                    @link.Title
+                                </a>
+                            </li>
+                        }
+                    }
+                </ul>
+            </nav>
+        </div>
     </div>
 </nav>
 
 <script asp-add-nonce="true">
     document.addEventListener('DOMContentLoaded', function () {
-        const menuToggle = document.getElementById('menu-toggle');
-        const menuClose = document.getElementById('close-menu');
-        const navigation = document.getElementById('header-navigation');
+        const menuToggle = document.querySelector('.govuk-js-service-navigation-toggle');
+        const navigation = document.getElementById('navigation');
 
-        menuToggle.addEventListener('click', function () {
-            const isOpen = navigation.classList.toggle('js-show');
-            menuToggle.setAttribute('aria-expanded', isOpen.toString());
-        });
-
-        menuClose.addEventListener('click', function () {
-            navigation.classList.remove('js-show');
-            menuToggle.setAttribute('aria-expanded', 'false');
-        });
+        if (menuToggle && navigation) {
+            menuToggle.addEventListener('click', function () {
+                const isExpanded = this.getAttribute('aria-expanded') === 'true';
+                this.setAttribute('aria-expanded', !isExpanded);
+                navigation.style.display = isExpanded ? 'none' : 'flex';
+            });
+        }
     });
+
 </script>
