--- a/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
@@ -20,7 +20,7 @@
                                          action: "CookiePolicy",
                                          controller: "Pages",
                                          protocol: "https",
-                                         values: new { language = languageCode}
+                                         values: new { languageCode }
                                      )"/>
     
     <meta property="og:locale" content="en_GB"/>
