--- a/src/web/CareLeavers.Web/Views/Pages/PrivacyPolicies.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/PrivacyPolicies.cshtml
@@ -20,7 +20,7 @@
                                          action: "PrivacyPolicies",
                                          controller: "Pages",
                                          protocol: "https",
-                                         values: new { language = languageCode}
+                                         values: new { languageCode }
                                      )"/>
 
     <meta property="og:locale" content="en_GB"/>
