--- a/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
@@ -24,7 +24,12 @@
                                      )"/>
     
     <meta property="og:locale" content="en_GB"/>
-
+    <link rel="canonical" href="@Url.Action(
+                                    action: "CookiePolicy",
+                                    controller: "Pages",
+                                    protocol: "https",
+                                    values: new { languageCode }
+                                )"/>
 }
 
 @section BeforeGDSContent
