Pass through the language to get the correct URL for cookie policies

--- a/src/web/CareLeavers.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -42,7 +42,7 @@
                 <button type="button" class="govuk-button" data-module="govuk-button" data-cookie-string="@rejectCookieString" id="reject-cookie">
                     Reject analytics cookies
                 </button>
-                @Html.ActionLink("View cookies", "CookiePolicy", "Pages", null, new { @class = "govuk-link" })
+                @Html.ActionLink("View cookies", "CookiePolicy", "Pages",  new { languageCode = Model.Language }, new { @class = "govuk-link" })
             </div>
         </div>
     </div>
