--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -34,7 +34,7 @@
                                      )"/>
     @if (Model.SeoImage != null)
     {
-        <meta property="og:image" content="@Model.SeoImage.File.Url"/>
+        <meta property="og:image" content="https:@Model.SeoImage.File.Url"/>
         <meta property="og:image:type" content="@Model.SeoImage.File.ContentType"/>
         <meta property="og:image:width" content="@Model.SeoImage.File.Details.Image.Width"/>
         <meta property="og:image:height" content="@Model.SeoImage.File.Details.Image.Height"/>
@@ -42,7 +42,7 @@
     } 
     else if (config.DefaultSeoImage != null)
     {
-        <meta property="og:image" content="@config.DefaultSeoImage.File.Url"/>
+        <meta property="og:image" content="https:@config.DefaultSeoImage.File.Url"/>
         <meta property="og:image:type" content="@config.DefaultSeoImage.File.ContentType"/>
         <meta property="og:image:width" content="@config.DefaultSeoImage.File.Details.Image.Width"/>
         <meta property="og:image:height" content="@config.DefaultSeoImage.File.Details.Image.Height"/>
