--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -420,3 +420,7 @@ html
 .govuk-grid-column-two-thirds > .govuk-grid-row > .box-ext {
   margin: 2.5em 15px;
 }
+
+.govuk-phase-banner {
+  border-bottom: none;
+}
