Add canonical for error page

--- a/src/web/CareLeavers.Web/Views/Pages/Error.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/Error.cshtml
@@ -11,6 +11,12 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
+    <link rel="canonical" href="@Url.Action(
+                                    action: "Error",
+                                    controller: "Pages",
+                                    protocol: "https",
+                                    values: new { languageCode = "en" }
+                                )"/>
 }
 
 @section BeforeGDSContent
