Fix/last updated format (#121)
* date format changed on last updated component

* tests passing

* added line break

* line break on lest updated lengthened and mobile nav styling tweaked

* tests passing

* tests passing on local

---------

Co-authored-by: EmilyEkins <emilyekins@ES-Ekinss-MacBook-Pro.local>

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -102,11 +102,12 @@
             <gds-contentful-contents document="@Model.MainContent" levels="@Model.ContentsHeadings"/>
         }
         <gds-contentful-rich-text document="@Model.MainContent"></gds-contentful-rich-text>
-        
+    </div>
+    <div class="govuk-grid-column-full">
         <partial name="LastUpdated" model="@Model"/>
         
         <partial name="Shareaholic" model="Model"/>
-    </div>
+        </div>
     @if (Model.Width == PageWidth.TwoThirds)
     {
         <div class="govuk-grid-column-one-third">
