--- a/src/web/CareLeavers.Web/Views/Shared/LastUpdated.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/LastUpdated.cshtml
@@ -6,6 +6,7 @@
     <div class="govuk-grid-row">
         <div class="metadata-logo-wrapper">
             <div class="govuk-grid-column-two-thirds metadata-column">
+                <hr class="govuk-section-break govuk-section-break--visible">
                 <div class="gem-c-metadata" data-module="gem-toggle metadata">
                     <dl class="gem-c-metadata__list">
                         <dt class="gem-c-metadata__term">From:</dt>
@@ -13,11 +14,11 @@
                             <a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
 
                         </dd>
-                        <dt class="gem-c-metadata__term">Published</dt>
-                        <dd class="gem-c-metadata__definition">@Model.Sys.CreatedAt?.ToString("dd MMMM yyyy", DateTimeFormatInfo.InvariantInfo)</dd>
-                        <dt class="gem-c-metadata__term">Last updated</dt>
+                        <dt class="gem-c-metadata__term">Published:</dt>
+                        <dd class="gem-c-metadata__definition">@Model.Sys.CreatedAt?.ToString("d MMMM yyyy", DateTimeFormatInfo.InvariantInfo)</dd>
+                        <dt class="gem-c-metadata__term">Last updated:</dt>
                         <dd class="gem-c-metadata__definition">
-                            @Model.Sys.UpdatedAt?.ToString("dd MMMM yyyy", DateTimeFormatInfo.InvariantInfo)
+                            @Model.Sys.UpdatedAt?.ToString("d MMMM yyyy", DateTimeFormatInfo.InvariantInfo)
                         </dd>
                     </dl>
                 </div>
