--- a/src/web/CareLeavers.Web/Views/Pages/ServiceUnavailable.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/ServiceUnavailable.cshtml
@@ -6,7 +6,7 @@
     var config = await ContentfulConfiguration.GetConfiguration();
 
     ViewBag.Title = $"Sorry, the service is unavailable";
-    Layout = "_ErrorLayout";
+    Layout = "_Layout";
 }
 
 @section Head
