service name now on the left for mobile view

--- a/src/web/CareLeavers.Web/AssetSrc/scss/navigation.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/navigation.scss
@@ -1,4 +1,7 @@
 @media (max-width: 43em) {
+  .dfe-header .dfe-header__service-name{
+    text-align: left;
+  }
   .govuk-service-navigation__container {
     flex-direction: column;
     align-items: start;
