- Updated to disable translation, footer links, and navigation on the service unavailable page - Updated phase banner - Updated translation to translate the current page - Updated translation logo to also be clickable

--- a/src/web/CareLeavers.Web/Views/Pages/ServiceUnavailable.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/ServiceUnavailable.cshtml
@@ -6,7 +6,7 @@
     var config = await ContentfulConfiguration.GetConfiguration();
 
     ViewBag.Title = $"Sorry, the service is unavailable";
-    Layout = "_Layout";
+    Layout = "_BasicLayout";
 }
 
 @section Head
