--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -15,12 +15,16 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 .translate {
   display: block;
   text-align: right;
-  width: 90px;
+  min-width: 90px;
   float: right;
   font-size: 1em;
+}
+
+.translate a.govuk-link {
   background-image: url("/assets/icon-translate.png");
   background-repeat: no-repeat;
   background-size: contain;
+  padding-left: 32px;
 }
 
 .environment-banner {
