--- a/src/web/CareLeavers.Web/Views/Translation/Index.cshtml
+++ b/src/web/CareLeavers.Web/Views/Translation/Index.cshtml
@@ -1,5 +1,5 @@
 @using CareLeavers.Web.Configuration
-@model IEnumerable<CareLeavers.Web.Translation.TranslationLanguage>
+@model CareLeavers.Web.Models.ViewModels.TranslationViewModel
 @inject IContentfulConfiguration ContentfulConfiguration
 @{
     ViewBag.Title = "Translate this website";
@@ -27,13 +27,13 @@
 }
 
 @{
-    var count = (double)Model.Count();
+    var count = (double)Model.Languages.Count();
     var columnSize = 1;
     if (count > 0)
     {
         columnSize = (int)Math.Ceiling(count / 3d);
     }
-    var languageLists = Model.Chunk(columnSize);
+    var languageLists = Model.Languages.Chunk(columnSize);
 }
 
 <div class="govuk-grid-row">
@@ -46,9 +46,9 @@
                     <li>
                         @Html.ActionLink(
                             $"{translation.NativeName} ({translation.Name})",
-                            "Homepage",
+                            "GetContent",
                             "Contentful",
-                            new { languageCode = translation.Code },
+                            new { slug = Model.Slug ?? config.HomePage.Slug,languageCode = translation.Code },
                             new { @class = "govuk-link", rel = "nofollow" })
                     </li>
                 }
