--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -10,7 +10,7 @@
 
 
 @{
-    ViewBag.Title = Model.Title;
+    ViewBag.Title = !string.IsNullOrEmpty(Model.SeoTitle) ? Model.SeoTitle : Model.Title;
     Layout = "_Layout";
     var config = await ContentfulConfiguration.GetConfiguration();
     var languageCode = Context.Request.RouteValues["languageCode"]?.ToString();
