--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -1,4 +1,5 @@
 @using CareLeavers.Web.Configuration
+@using CareLeavers.Web.Controllers
 @using Microsoft.Extensions.Options
 @model CareLeavers.Web.Models.ViewModels.ConfigViewModel
 
@@ -12,17 +13,52 @@
     </div>
 }
 
-@if (ScriptOptions.Value.ShowCookieBanner)
+@if (ScriptOptions.Value.ShowCookieBanner && !Model.IsError)
 {
     <partial name="_CookieConsentPartial" model="@Model"/>
 }
 
 <div class="govuk-width-container">
     <div class="govuk-phase-banner">
-        @if (Model.ContentfulConfiguration.TranslationEnabled)
+        @if (Model.ContentfulConfiguration.TranslationEnabled && Model.ShowLanguage)
         {
+            var currentSlug = ViewContext.RouteData.Values["slug"]?.ToString() ?? Model.ContentfulConfiguration.HomePage?.Slug;
+            var currentLanguage = ViewContext.RouteData.Values["languageCode"]?.ToString() ?? "en";
+            var currentController = ViewContext.RouteData.Values["controller"]?.ToString();
+            var currentAction = ViewContext.RouteData.Values["action"]?.ToString();
             <p class="translate">
-                @Html.ActionLink(Model.Language.NativeName, "Index", "Translation", null, new { @class = "govuk-link", rel="nofollow" })
+
+                @switch (currentController)
+                {
+                    case "Contentful" when currentLanguage != "en":
+                        @Html.ActionLink(Model.Language.NativeName,
+                            "GetContent",
+                            "Contentful",
+                            new { slug = currentSlug, languageCode = "en" },
+                            new { @class = "govuk-link", rel = "nofollow" })
+                        break;
+                    case "Pages" when currentLanguage != "en":
+                        @Html.ActionLink(Model.Language.NativeName,
+                            currentAction,
+                            "Pages",
+                            new { languageCode = "en" },
+                            new { @class = "govuk-link", rel = "nofollow" })
+                        break;
+                    case "Pages":
+                        @Html.ActionLink(Model.Language.NativeName,
+                            "Page",
+                            "Translation",
+                            new { page = currentAction },
+                            new { @class = "govuk-link", rel = "nofollow" })
+                        break;
+                    default:
+                        @Html.ActionLink(Model.Language.NativeName,
+                            "Index",
+                            "Translation",
+                            new { slug = currentSlug },
+                            new { @class = "govuk-link", rel = "nofollow" })
+                        break;
+                }
             </p>
         }
         <div class="govuk-phase-banner__content">
@@ -31,10 +67,11 @@
             </strong>
             <span class="govuk-phase-banner__text">
                 This is a new service.
-                @if (!string.IsNullOrEmpty(Model.ContentfulConfiguration.FeedbackText))
+                @if (!string.IsNullOrEmpty(Model.ContentfulConfiguration.FeedbackText) && Model.ShowNavigation)
                 {
                     <text>
-                        Your <a class="govuk-link" href="@Model.ContentfulConfiguration.FeedbackUrl" rel="nofollow">@Model.ContentfulConfiguration.FeedbackText</a> will help us to improve it.
+                        Help us improve it and <a class="govuk-link" href="@Model.ContentfulConfiguration.FeedbackUrl" target="_blank" rel="nofollow">
+                            @Model.ContentfulConfiguration.FeedbackText (opens in new tab)</a>. 
                     </text>
                 }
             </span>
@@ -57,7 +94,7 @@
     <div class="dfe-width-container dfe-header__service-name">
         @Model.ContentfulConfiguration.ServiceName
     </div>
-    @if (!Model.IsError)
+    @if (Model is { IsError: false, ShowNavigation: true })
     { 
         await Html.RenderPartialAsync("Navigation", Model);
     }
