--- a/src/web/CareLeavers.Web/Views/Pages/PrivacyPolicies.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/PrivacyPolicies.cshtml
@@ -43,7 +43,9 @@
 }
 
 <p class="govuk-body">
-    This work is being carried out by the Department for Education (DfE). 
+    This work is being carried out by the Department for Education (DfE).
+</p>
+<p class="govuk-body">
     For the purpose of data protection legislation, the DfE is the data controller for the personal data processed as part of the @config.ServiceName website.
 </p>
 <p class="govuk-body">
