Various Content and Performance Fixes (#133)
* Renaming translation filter file to match class name

* Reducing JSON size and stopping the second HSTS call which was clearing the correct settings

* Updated slug for translation to "translate-this-website"

* Cookie policy changes

* Removed /pages/ from urls
Cache static assets

* Updated cookie policy

* Update privacy policy content

* Updated content and URLs

* Fix unit and integration tests

* Updated tests

* Fixing tests

--- a/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
@@ -4,7 +4,7 @@
 @inject IContentfulConfiguration ContentfulConfiguration
 
 @{
-    ViewBag.Title = "Cookies Policy";
+    ViewBag.Title = "Cookie policy";
     Layout = "_Layout";
 
     var config = await ContentfulConfiguration.GetConfiguration();
@@ -67,7 +67,7 @@
 </p>
 <h2 class="govuk-heading-l">Essential cookies</h2>
 <p class="govuk-body">
-    Essential cookies keep your information secure while you use @config.ServiceName 
+    Essential cookies keep your information secure while you use @(config.ServiceName). 
     These cookies enable core functionality, such as security, network management, and accessibility. 
     We do not require permission to use essential cookies.
 </p>
@@ -192,7 +192,7 @@
     </tbody>
 </table>
 <hr class="govuk-section-break govuk-section-break--l g" />
-@using (Html.BeginForm("PostCookiePolicy", "Pages", FormMethod.Post, new { @class = "govuk-form" }))
+@using (Html.BeginForm("PostCookiePolicy", "Pages", method: FormMethod.Post, htmlAttributes: new { @class = "govuk-form" }, routeValues: new { languageCode }, antiforgery: true ))
 {
     <fieldset class="govuk-fieldset">
         <div class="govuk-form-group">
