--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -12,6 +12,9 @@
                             @Html.ActionLink("Cookie policy", "CookiePolicy", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                         </li>
                         <li class="govuk-footer__inline-list-item">
+                            @Html.ActionLink("Accessibility statement", "AccessibilityStatement", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
+                        </li>
+                        <li class="govuk-footer__inline-list-item">
                             @Html.ActionLink("Privacy policies", "PrivacyPolicies", "Pages", new { languageCode = Model.Language.Code }, new { @class = "govuk-footer__link" })
                         </li>
                     </ul>
